# ind_study_fall_2012

./: .gitignore  dot_to_graph_rjs.m  dumb_dijkstra.m  dumb_edge_dijkstra.m  petal_strategy  project.bib  project.tex  roundlengths.rb  stuff.m  ug_all  zti.m
cppTree/: CMakeLists.txt  Makefile  cmake_install.cmake  do-cmake  first_setup
cppTree/src/: CMakeLists.txt  Makefile  cmake_install.cmake  cpptree_gtest.cpp  graph_typedefs.hpp  main.cpp  run  stprimitives.hpp  stprimitives_gtest.hpp  stretch.hpp
data/: OL.cedge  airlines.graphml  lesmis.mat  med.cedge  med.cnode  small.cedge  small.cnode  tiny.cedge  tiny.cnode
dg/: dgaaa  dgaab  dgaac  dgaad  dgaae  dgaaf  dgaag  dgaah  dgaai  dgaaj  dgaak  dgaal  dgaam  dgaan  dgaao  dgaap  dgaaq  dgaar  dgaas  dgaat  dgaau  dgaav  dgaaw  dgaax  dgaay  dgaaz  dgaba  dgabb  dgabc  dgabd  dgabe  dgabf  dgabg  dgabh  dgabi  dgabj  dgabk  dgabl  dgabm  dgabn  (+5074 more)
fibheap/: demo.m  license.txt
julia_tree/: data.jl  main.jl  stprimitives.jl  subgraph.jl  weightedinclist.jl
julia_tree/test/: testdata.jl  testsubgraph.jl
lib/cmake/: Trilinos
paper/: build  project.bbl  project.blg  project.tex
trilinosExample/src/: src_file.cpp
ug/: ugab  ugad  ugae  ugah  ugai  ugaj  ugan  ugao  ugaq  ugas  ugat  ugav  ugax  ugay  ugbd  ugbe  ugbf  ugbg  ugbj  ugbn  ugbo  ugbp  ugbs  ugbu  ugbv  ugbw  ugbx  ugby  ugca  ugcb  ugce  ugch  ugck  ugcm  ugcp  ugcr  ugcs  ugct  ugcu  ugcv  (+146 more)
ug_unweighted/: ugaa  ugac  ugaf  ugag  ugak  ugal  ugam  ugap  ugar  ugau  ugaw  ugaz  ugba  ugbb  ugbc  ugbh  ugbi  ugbk  ugbl  ugbm  ugbq  ugbr  ugbt  ugbz  ugcc  ugcd  ugcf  ugcg  ugci  ugcj  ugcl  ugcn  ugco  ugcq  ugcw  ugcx  ugda  ugdd  ugde  ugdf  (+163 more)
